--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Whoopsie</title>
+        <title>The Tea Cozy - Organic Tea Shop</title>
         <link rel="stylesheet" href="resources/CSS/style.css">
     </head>
     <body>
-        <h1>Hello World</h1>
+        <header>
+            <img id="logo" src="resources/media/pictures/img-tea-cozy-logo.webp" alt="Tea Cozy Logo">
+            <nav class="navigation">
+                <ul>
+                    <li>Mission</li>
+                    <li>Featured Tea</li>
+                    <li>Locations</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="mission">
+                <div id="missionstatement">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                </div>
+        </section>
+        <footer>
+            <h2>The Tea Cozy</h2>
+            <br>
+            <h5>contact@theteacozy.com</h5>
+            <br>
+            <h5>917-555-8904</h5>
+        </footer>
+        </main>
     </body>
 
 </html>
